# hkl

./: .gitignore  Makefile.am  SConstruct  autogen.sh  configure.ac  hkl.h  waf  wscript
Documentation/: Makefile.am
contrib/haskell/src/Hkl/Binoculars/Projections/: QxQyQz.hs
data/: cristal4C.yaml
gui/hkl3d/: hkl3d-gui-gl.c  hkl3d-gui-model.cpp
hkl/: Makefile.am  hkl-axis.vala  hkl-factory.c  hkl-geometry.vala  hkl-lattice.vala  hkl-list.h  hkl-macros.h  hkl-matrix.vala  hkl-parameter.vala  hkl-pseudoaxis-aps-polar-hkl.c  hkl-pseudoaxis-aps-polar-private.h  hkl-pseudoaxis-auto-e6c.vala  hkl-pseudoaxis-auto-hkl.vala  hkl-pseudoaxis-auto-k4cv.vala  hkl-pseudoaxis-auto-psi.vala  hkl-pseudoaxis-auto.vala  hkl-pseudoaxis-petra3-hkl.c  hkl-pseudoaxis.vala  hkl-quaternion.vala  hkl-sample.vala  hkl-vector.vala
hkl3d/: hkl3d.cpp  hkl3d.h
site_scons/site_tools/: vala.py
src/: Makefile.am  SConscript  gsl.vapi  hkl-axis.vala  hkl-constants.vala  hkl-detector.c  hkl-detector.h  hkl-detector.vala  hkl-geometry-factory.h  hkl-geometry.vala  hkl-holder.vala  hkl-interval.vala  hkl-lattice.c  hkl-lattice.h  hkl-lattice.vala  hkl-list.vala  hkl-macros.h  hkl-matrix.vala  hkl-parameter.c  hkl-parameter.h  hkl-parameter.vala  hkl-pseudoaxis-E4CV.h  hkl-pseudoaxis-auto-E4CV.vala  hkl-pseudoaxis-auto-K4CV.vala  hkl-pseudoaxis-auto-e4cv.vala  hkl-pseudoaxis-auto-e6c.vala  hkl-pseudoaxis-auto-eulerians.vala  hkl-pseudoaxis-auto-hkl.vala  hkl-pseudoaxis-auto-k4cv.vala  hkl-pseudoaxis-auto-k6c.vala  hkl-pseudoaxis-auto-psi.vala  hkl-pseudoaxis-auto-q.vala  hkl-pseudoaxis-auto.c  hkl-pseudoaxis-auto.vala  hkl-pseudoaxis-common.c.orig  hkl-pseudoaxis-factory.h  hkl-pseudoaxis.c  hkl-pseudoaxis.h  hkl-pseudoaxis.vala  hkl-quaternion.vala  (+8 more)
test/: Makefile.am  SConscript  bench.c  hkl-list.h  hkl-macros.h  hkl-test-axis.c  hkl-test-detector.c  hkl-test-geometry.c  hkl-test-holder.c  hkl-test-interval.c  hkl-test-lattice.c  hkl-test-list.c  hkl-test-matrix.c  hkl-test-parameter.c  hkl-test-pseudoaxis-e4cv.c  hkl-test-pseudoaxis-e6c.c  hkl-test-pseudoaxis-k4cv.c  hkl-test-pseudoaxis-k6c.c  hkl-test-pseudoaxis.c  hkl-test-quaternion.c  hkl-test-sample.c  hkl-test-source.c  hkl-test-vector.c  hkl-test.c  hkl-test.h  main.c  wscript_build
test/hkl3d/: main.c
tests/: hkl-pseudoaxis-t.c
tests/bindings/: python.py  trajectory.py
